--- a/app/src/main/res/layout/activity_question_detail.xml
+++ b/app/src/main/res/layout/activity_question_detail.xml
@@ -9,11 +9,21 @@
     android:paddingTop="16dp"
     tools:context=".QuestionDetailActivity">
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="お気に入りに登録する"
+        android:textColor="@color/colorButtonText"
+        android:background="@drawable/custom_button"
+        android:id="@+id/buttonFavorite"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="5dp"/>
+
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/listView"
-        android:layout_alignParentTop="true"
+        android:layout_below="@+id/buttonFavorite"
         android:layout_alignParentStart="true" />
 
     <android.support.design.widget.FloatingActionButton
